Removes setback (gap) between the street and the buildings. Fixes #68.

--- a/css/styles.less
+++ b/css/styles.less
@@ -184,7 +184,7 @@ header .options {
 
   z-index: 1000;
 
-  left: -120px;
+  left: -90px;
 
   top: 40px;
 
@@ -199,7 +199,7 @@ header .options {
 
   z-index: 1000;
 
-  right: -120px;
+  right: -90px;
 
   top: 40px;
 
